<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RTSU.STUDENTS</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Добро пожаловать "</string>
    <string name="invalid_username">Неверное имя пользователя</string>
    <string name="invalid_password">Неправильный пароль</string>
    <string name="login_failed">Неправильный имя пользователя или пароль</string>
    <string name="university_name">Российско-Таджикский (Славянский) университет</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="lesson_name">Названые предмета</string>
    <string name="teacher_name">Имя преподователья</string>
    <string name="points">Баллы</string>
    <string name="title_points">Баллы</string>
    <string name="title_profile">Профиль</string>
    <string name="course_name">Названые предмета</string>
    <string name="rating_one">РЕЙТИНГ 1</string>
    <string name="example_rating_points">30/100</string>
    <string name="rating_two">РЕЙТИНГ 2</string>
    <string name="example_exam_points">13/20</string>
    <string name="exam_text">ЭКЗАМЕН</string>
    <string name="select_semester">Выберите семестер</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tnu_student">RTSU.STUDENT</string>
    <string name="full_name">Полное имя</string>
    <string name="faculty">Факультет</string>
    <string name="specialty">Специальность</string>
    <string name="specialty_and_code">Специальность</string>
    <string name="text_faculty">Факультет</string>
    <string name="server_not_work">Сервер недоступен</string>
    <string name="internet_not_available">Проверте подключение к интернету</string>
    <string name="error_load_data">Ошибка при загрузке данных.</string>
    <string name="traning_form">Форма обучения</string>
    <string name="training_form">Форма обучения</string>
    <string name="training_level">Уровень подготовки</string>
    <string name="course_and_training_period">Курс / период обучения</string>
    <string name="group">Группа</string>
    <string name="year_entrance">Год поступления</string>
    <string name="total_points">БАЛЛ / ОЦЕНКА общий </string>
    <string name="not_courses_information">Нет данных для выбранного семестра</string>
    <string name="logout">Выйти</string>
    <string name="try_again">Попробовать заново.</string>
    <string name="tajik">Тоҷикӣ</string>
    <string name="russian">Русский</string>
    <string name="admin_point">Административный балл</string>
</resources>