<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnu_student"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:textSize="25sp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_log_out"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:textSize="17sp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto_regular"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/profile_top_title_background">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_students_cap"
                    android:layout_gravity="top"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="200dp"
                        android:textColor="@color/white"
                        android:text="@string/full_name"
                        android:textSize="17sp"
                        android:fontFamily="@font/roboto_regular"/>

                    <TextView
                        android:id="@+id/record_book_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="10dp"/>


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/profile_top_title_background">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_faculty"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/faculty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialty_and_code"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/specialty_and_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/training_form"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/training_form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/training_level"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/training_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_and_training_period"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/course_and_training_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year_entrance"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"/>

                <TextView
                    android:id="@+id/year_entrance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="17sp"/>

            </LinearLayout>
                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>