<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_all_background_gradient"
    tools:context="login.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/a_alterna_sw"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="8dp"
            android:text="@string/university_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textSize="25sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_click_effect"
                android:fontFamily="@font/roboto_regular"
                android:letterSpacing="0.1"
                android:paddingStart="40dp"
                android:paddingTop="10dp"
                android:paddingEnd="40dp"
                android:paddingBottom="10dp"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                android:indeterminateDrawable="@drawable/progress_bar_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                android:alpha="0.6"/>

            <TextView
                android:id="@+id/try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                android:text="@string/try_again"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:alpha="0.6"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>