<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".points.CoursePoints"
    android:background="@drawable/view_course_points_background">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/course_points_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_points_detail"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/course_points_background">
        <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="bold"
            android:text="@string/course_name"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.1"
            android:textSize="17sp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_one"
                        android:textColor="@color/rating_color"
                        android:textSize="17sp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/rating_one_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/example_rating_points"
                        android:textColor="@color/points_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.3"
                        android:background="@color/line_color"
                        android:layout_below="@id/rating_one_point"
                        android:layout_marginTop="15dp"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/rating_one_week_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_two"
                        android:textColor="@color/rating_color"
                        android:textSize="17sp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/rating_two_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/example_rating_points"
                        android:textColor="@color/points_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.3"
                        android:background="@color/line_color"
                        android:layout_below="@id/rating_two_point"
                        android:layout_marginTop="15dp"/>
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/rating_two_week_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
                <RelativeLayout
                    android:id="@+id/administration_point_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin_point"
                        android:textColor="@color/rating_color"
                        android:textSize="17sp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/administration_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/example_exam_points"
                        android:textColor="@color/points_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.3"
                        android:background="@color/line_color"
                        android:layout_below="@id/administration_point"
                        android:layout_marginTop="15dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exam_text"
                        android:textColor="@color/rating_color"
                        android:textSize="17sp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/exam_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/example_exam_points"
                        android:textColor="@color/points_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.3"
                        android:background="@color/line_color"
                        android:layout_below="@id/exam_point"
                        android:layout_marginTop="15dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_points"
                        android:textColor="@color/rating_color"
                        android:textSize="17sp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/total_points_and_mark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/points_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.3"
                        android:background="@color/line_color"
                        android:layout_below="@id/total_points_and_mark"
                        android:layout_marginTop="15dp"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>